--- a/css/user.css
+++ b/css/user.css
@@ -243,3 +243,22 @@ h1, p, span{
     }
   
   }
+
+
+  #map {
+    height: 80%;
+    width: 70%;
+    margin-left: 10rem;
+    border: 10px solid gray;
+    border-radius: 5px;
+    margin-bottom: 10rem;
+    margin-top: 5rem;
+  }
+  
+  html,
+  body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  
